Add Publishing Tracker, Spotify integration, and tooling updates

--- a/apps/backend/.env.example
+++ b/apps/backend/.env.example
@@ -32,3 +32,7 @@ GOOGLE_SHEETS_API_KEY=
 BMI_API_KEY=
 ASCAP_API_KEY=
 SESAC_API_KEY=
+
+# Spotify Web API
+SPOTIFY_CLIENT_ID=your-spotify-client-id
+SPOTIFY_CLIENT_SECRET=your-spotify-client-secret
