--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -17,10 +17,12 @@
     "lint": "eslint src --ext .ts"
   },
   "dependencies": {
+    "@esbuild/darwin-arm64": "^0.25.11",
     "@prisma/client": "^5.22.0",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
+    "esbuild": "^0.25.11",
     "express": "^4.21.1",
     "express-fileupload": "^1.5.1",
     "jsonwebtoken": "^9.0.2",
