--- a/apps/frontend/vercel.json
+++ b/apps/frontend/vercel.json
@@ -1,5 +1,5 @@
 {
-  "buildCommand": "npm run build",
+  "buildCommand": "npm install --no-optional && npm run build",
   "outputDirectory": "dist",
   "framework": "vite",
   "rewrites": [
