--- a/apps/backend/render.yaml
+++ b/apps/backend/render.yaml
@@ -1,36 +1,6 @@
-# Render Blueprint for Producer Tour Backend
-# https://render.com/docs/blueprint-spec
-
-services:
-  # Node.js API Server
-  - type: web
-    name: producer-tour-api
-    env: node
-    region: oregon
-    plan: starter # $7/mo - upgrade to standard ($25) for production
-    buildCommand: cd apps/backend && npm install && npm run build && npx prisma generate
-    startCommand: cd apps/backend && npm start
-    healthCheckPath: /health
-    envVars:
-      - key: NODE_ENV
-        value: production
-      - key: PORT
-        value: 3000
-      - key: JWT_SECRET
-        generateValue: true # Auto-generate secure secret
-      - key: JWT_EXPIRES_IN
-        value: 7d
-      - key: DATABASE_URL
-        fromDatabase:
-          name: producer-tour-db
-          property: connectionString
-      - key: CORS_ORIGIN
-        sync: false # Set manually to your Vercel URL
-
-# PostgreSQL Database
-databases:
-  - name: producer-tour-db
-    databaseName: producer_tour
-    plan: starter # $7/mo - includes 1GB storage
-    region: oregon
-    postgresMajorVersion: 15
+# Deployment blueprint moved
+#
+# The Render blueprint now lives at the repository root in `render.yaml` so it
+# can cover both the frontend static site and the backend API in a single
+# configuration. This placeholder file remains only to avoid breaking older
+# documentation links.
