--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   "scripts": {
     "dev": "concurrently \"npm run dev --workspace=apps/backend\" \"npm run dev --workspace=apps/frontend\"",
     "build": "npm run build --workspaces",
+    "build:backend": "npm run build --workspace=apps/backend",
+    "build:frontend": "npm run build --workspace=apps/frontend",
     "backend": "npm run dev --workspace=apps/backend",
     "frontend": "npm run dev --workspace=apps/frontend",
     "db:studio": "npm run db:studio --workspace=apps/backend",
