--- a/render.yaml
+++ b/render.yaml
@@ -1,28 +1,9 @@
 services:
-  - type: static
-    name: producer-tour-frontend
-    env: static
-    region: oregon
-    buildCommand: npm install --no-optional && npm run build:frontend
-    publishPath: apps/frontend/dist
-    headers:
-      - path: /assets/*
-        name: Cache-Control
-        value: public, max-age=31536000, immutable
-    routes:
-      - type: rewrite
-        source: /*
-        destination: /index.html
-    envVars:
-      - key: VITE_API_URL
-        sync: false
-
   - type: web
     name: producer-tour-api
     env: node
-    region: oregon
-    plan: starter
-    buildCommand: npm install --no-optional && npm run build:backend && npm run db:generate --workspace=apps/backend
+    runtime: node
+    buildCommand: npm install && npm run build
     startCommand: npm run start --workspace=apps/backend
     healthCheckPath: /health
     envVars:
@@ -32,18 +13,24 @@ services:
         value: 3000
       - key: JWT_SECRET
         generateValue: true
-      - key: JWT_EXPIRES_IN
-        value: 7d
       - key: DATABASE_URL
         fromDatabase:
           name: producer-tour-db
           property: connectionString
       - key: CORS_ORIGIN
-        sync: false
-
+        fromService:
+          type: web
+          name: producer-tour-frontend
+          envVarKey: RENDER_EXTERNAL_URL
+  - type: web
+    name: producer-tour-frontend
+    env: static
+    buildCommand: npm install && npm run build:frontend
+    staticPublishPath: apps/frontend/dist
+    routes:
+      - type: rewrite
+        source: "/*"
+        destination: "/index.html"
 databases:
   - name: producer-tour-db
-    databaseName: producer_tour
     plan: starter
-    region: oregon
-    postgresMajorVersion: 15
