--- a/apps/backend/.env.example
+++ b/apps/backend/.env.example
@@ -4,6 +4,7 @@ DATABASE_URL="postgresql://user:password@localhost:5432/producer_tour?schema=pub
 # Server
 NODE_ENV=development
 PORT=3000
+# For development, use localhost. For production, set to your Vercel frontend domain
 CORS_ORIGIN=http://localhost:5173
 
 # JWT
