--- a/apps/frontend/.env.example
+++ b/apps/frontend/.env.example
@@ -1,1 +1,5 @@
+# Development
 VITE_API_URL=http://localhost:3000
+
+# Production (set this in Vercel dashboard)
+# VITE_API_URL=https://api.producertour.com
