--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,4 @@
 {
-  "installCommand": "npm install --no-optional",
-  "buildCommand": "npm run build:frontend",
-  "outputDirectory": "apps/frontend/dist",
-  "framework": "vite",
   "rewrites": [
     {
       "source": "/(.*)",
@@ -18,6 +14,18 @@
           "value": "public, max-age=31536000, immutable"
         }
       ]
+    },
+    {
+      "source": "/index.html",
+      "headers": [
+        {
+          "key": "Cache-Control",
+          "value": "no-cache, no-store, must-revalidate"
+        }
+      ]
     }
-  ]
+  ],
+  "env": {
+    "VITE_API_URL": "@vite_api_url"
+  }
 }
