--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -24,6 +24,7 @@
     "autoprefixer": "^10.4.20",
     "postcss": "^8.4.49",
     "tailwindcss": "^3.4.15",
+    "@types/node": "^22.18.13",
     "typescript": "^5.6.3",
     "vite": "^5.4.11"
   }
