--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -8,7 +8,7 @@
     "prebuild": "prisma generate",
     "build": "tsc",
     "start": "node dist/index.js",
-    "start:render": "prisma migrate deploy && node dist/index.js",
+    "start:render": "prisma migrate deploy --schema ./prisma/schema.prisma && node dist/index.js",
     "typecheck": "tsc --noEmit",
     "db:migrate": "prisma migrate dev",
     "db:generate": "prisma generate",
