--- a/apps/backend/.env.example
+++ b/apps/backend/.env.example
@@ -39,3 +39,9 @@ SESAC_API_KEY=
 # Spotify Web API
 SPOTIFY_CLIENT_ID=your-spotify-client-id
 SPOTIFY_CLIENT_SECRET=your-spotify-client-secret
+
+# Stripe
+# Get these from https://dashboard.stripe.com/apikeys
+# Use test keys (sk_test_...) for development, live keys (sk_live_...) for production
+STRIPE_SECRET_KEY=your-stripe-secret-key
+STRIPE_PUBLISHABLE_KEY=your-stripe-publishable-key
