--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -5,7 +5,7 @@
   "main": "dist/index.js",
   "scripts": {
     "dev": "tsx watch src/index.ts",
-    "postinstall": "if [ \"$CI\" != \"true\" ]; then prisma generate || true; fi",
+    "postinstall": "echo 'Prisma generation skipped - run npm run db:generate manually'",
     "build": "node build.js",
     "start": "node dist/index.js",
     "start:render": "prisma migrate deploy && node dist/index.js",
@@ -31,6 +31,8 @@
     "esbuild": "^0.25.11",
     "express": "^4.21.1",
     "express-fileupload": "^1.5.1",
+    "express-rate-limit": "^8.2.1",
+    "helmet": "^8.1.0",
     "json2csv": "^6.0.0-alpha.2",
     "jsonwebtoken": "^9.0.2",
     "multer": "^1.4.5-lts.1",
