--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -14,9 +14,11 @@
     "@types/react-simple-maps": "^3.0.6",
     "axios": "^1.7.7",
     "d3-geo": "^3.1.1",
+    "framer-motion": "^12.23.24",
     "lucide-react": "^0.553.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-hot-toast": "^2.6.0",
     "react-router-dom": "^6.28.0",
     "react-simple-maps": "^3.0.0",
     "recharts": "^2.15.4",
