Producer Tour Beta 1.0
Producer Tour  - Patch Notes (Beta 1.0)
New Features
Tour Miles Gamification System
Introduced Tour Miles rewards program with tiered progression system
Earn Tour Points (TP) from platform activities: statement uploads, placement deals, daily logins, profile completion, and more
Five tier levels: Explorer → Trailblazer → Navigator → Voyager → Legend
Reward redemption system with milestone-based unlocks
Real-time points notifications and activity tracking
Dedicated Tour Miles dashboard with stats, leaderboard, and rewards catalog
Bug Fixes
Navigation & Layout
Fixed sidebar navigation getting stuck on Tour Miles page
Resolved content alignment issues across all dashboard tabs
Fixed Placement Tracker dropdown showing duplicate menu items
Corrected dashboard tab navigation logic (route-based vs state-based)
Added proper spacing for fixed sidebar across all pages
UI Improvements
Improved sidebar navigation consistency between Admin and Writer views
Enhanced hierarchical dropdown menu functionality
Better navigation fallback handling for standalone pages
Technical Improvements
Centralized navigation configuration for easier maintenance
Cleaned up navigation component architecture
Improved layout consistency across all dashboard views

--- a/apps/backend/.env.example
+++ b/apps/backend/.env.example
@@ -1,47 +1,175 @@
-# Database
-DATABASE_URL="postgresql://user:password@localhost:5432/producer_tour?schema=public"
+# ================================
+# Producer Tour Backend Environment Variables
+# ================================
+# Copy this file to .env and fill in your actual values
+# NEVER commit .env to git - it contains secrets!
 
-# Server
+# ================================
+# DATABASE
+# ================================
+# PostgreSQL connection string
+# Format: postgresql://username:password@host:port/database?schema=public
+# Local: postgresql://yourusername@localhost:5432/producer_tour_dev?schema=public
+# Production: Use Render's DATABASE_URL (automatically set by Render)
+DATABASE_URL=postgresql://user:password@localhost:5432/producer_tour?schema=public
+
+# ================================
+# SERVER CONFIGURATION
+# ================================
+# Environment: development, production, or test
 NODE_ENV=development
+
+# Port for the backend server (default: 3000)
+# Local: Use 10000 to avoid conflicts
+# Production: Render sets this automatically
 PORT=3000
-# For development, use localhost. For production, set to your Vercel frontend domain
+
+# CORS allowed origin (frontend URL)
+# Local: http://localhost:5173
+# Production: https://producertour.com or your Vercel domain
 CORS_ORIGIN=http://localhost:5173
 
-# JWT
+# ================================
+# JWT (JSON Web Tokens)
+# ================================
+# Secret key for signing JWT tokens - MUST be cryptographically secure!
+# Generate with: node -e "console.log(require('crypto').randomBytes(64).toString('hex'))"
+# CRITICAL: Use different secrets for local/production! Minimum 128 characters recommended.
+# NEVER share or commit this secret!
 JWT_SECRET=your-super-secret-jwt-key-change-this-in-production
+
+# JWT token expiration time (e.g., 7d, 24h, 60m)
 JWT_EXPIRES_IN=7d
 
-# Email (Optional - for notifications)
+# ================================
+# EMAIL SERVICE (SMTP)
+# ================================
+# SMTP server hostname
+# Examples: smtp.sendgrid.net, smtp.gmail.com, email-smtp.us-east-1.amazonaws.com
 SMTP_HOST=smtp.gmail.com
+
+# SMTP port (typically 587 for TLS, 465 for SSL)
 SMTP_PORT=587
+
+# Use secure connection (true for SSL/TLS, false for plain)
 SMTP_SECURE=false
+
+# SMTP authentication username (often your email address or API username)
 SMTP_USER=your-email@gmail.com
+
+# SMTP authentication password or API key
+# For Gmail: Use an app-specific password (not your regular password)
+# For SendGrid: Use your API key
 SMTP_PASS=your-app-password
+
+# Email address to send from
 EMAIL_FROM=Producer Tour <noreply@producertour.com>
+
+# ================================
+# FRONTEND URL
+# ================================
+# Used for generating links in emails (password reset, etc.)
+# Local: http://localhost:5173
+# Production: https://producertour.com
 FRONTEND_URL=http://localhost:5173
 
-# File Upload
+# ================================
+# FILE UPLOAD CONFIGURATION
+# ================================
+# Maximum file size in bytes (default: 10485760 = 10MB)
 MAX_FILE_SIZE=10485760
+
+# Directory for local file uploads (relative or absolute path)
 UPLOAD_DIR=./uploads
 
-# AWS S3 (Optional - for production file storage)
+# ================================
+# AWS S3 (OPTIONAL)
+# ================================
+# Leave empty to use local file storage
+# Set these values to enable S3 storage for uploads
+
+# AWS access key ID
 AWS_ACCESS_KEY_ID=
+
+# AWS secret access key
 AWS_SECRET_ACCESS_KEY=
+
+# S3 bucket name for storing statements and documents
 AWS_S3_BUCKET=producer-tour-statements
+
+# AWS region (e.g., us-east-1, us-west-2)
 AWS_REGION=us-east-1
 
-# External APIs (Future)
+# ================================
+# SPOTIFY WEB API
+# ================================
+# Used for artist/track metadata lookups
+# Get credentials from: https://developer.spotify.com/dashboard
+# Create a new app and copy the Client ID and Client Secret
+
+# Spotify application client ID
+SPOTIFY_CLIENT_ID=your-spotify-client-id
+
+# Spotify application client secret
+SPOTIFY_CLIENT_SECRET=your-spotify-client-secret
+
+# ================================
+# STRIPE PAYMENT PROCESSING
+# ================================
+# Get credentials from: https://dashboard.stripe.com/apikeys
+# Use TEST keys for local/staging, LIVE keys for production
+# TEST keys start with sk_test_... and pk_test_...
+# LIVE keys start with sk_live_... and pk_live_...
+
+# Stripe secret key (backend only)
+STRIPE_SECRET_KEY=your-stripe-secret-key
+
+# Stripe publishable key (can be exposed to frontend)
+STRIPE_PUBLISHABLE_KEY=your-stripe-publishable-key
+
+# ================================
+# EXTERNAL APIs (FUTURE USE)
+# ================================
+# These are placeholders for future integrations
 GOOGLE_SHEETS_API_KEY=
 BMI_API_KEY=
 ASCAP_API_KEY=
 SESAC_API_KEY=
 
-# Spotify Web API
-SPOTIFY_CLIENT_ID=your-spotify-client-id
-SPOTIFY_CLIENT_SECRET=your-spotify-client-secret
+# ================================
+# SECURITY NOTES
+# ================================
+# 1. JWT_SECRET: Generate a strong, unique secret for each environment
+#    - Local and production MUST have different secrets
+#    - Minimum 128 characters recommended (use crypto.randomBytes(64))
+#
+# 2. Database Credentials:
+#    - Never use the same database for local and production
+#    - Production DATABASE_URL is automatically set by Render
+#
+# 3. API Keys:
+#    - Use test/sandbox keys for local development
+#    - Use production keys only in production environment
+#    - Rotate keys periodically for security
+#
+# 4. SMTP Credentials:
+#    - For Gmail: Enable 2FA and use app-specific passwords
+#    - For SendGrid: Use API keys, not username/password
+#    - Consider disabling SMTP locally (comment out to log to console)
+#
+# 5. Render Environment Variables:
+#    - Set all production values in Render dashboard
+#    - Do not copy local .env to production
+#    - Render automatically provides DATABASE_URL
 
-# Stripe
-# Get these from https://dashboard.stripe.com/apikeys
-# Use test keys (sk_test_...) for development, live keys (sk_live_...) for production
-STRIPE_SECRET_KEY=your-stripe-secret-key
-STRIPE_PUBLISHABLE_KEY=your-stripe-publishable-key
+# ================================
+# LOCAL DEVELOPMENT SETUP
+# ================================
+# 1. Copy this file: cp .env.example .env
+# 2. Update DATABASE_URL with your local PostgreSQL credentials
+# 3. Generate JWT_SECRET: node -e "console.log(require('crypto').randomBytes(64).toString('hex'))"
+# 4. Add your Spotify credentials (optional, for metadata features)
+# 5. Add your Stripe TEST keys (get from Stripe dashboard)
+# 6. Comment out SMTP variables to disable email sending (logs to console instead)
+# 7. Set CORS_ORIGIN to http://localhost:5173
+# 8. Never commit .env to git!
