--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -5,35 +5,70 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
+    "build:analyze": "ANALYZE=true tsc && ANALYZE=true vite build",
     "preview": "vite preview",
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
+    "@hookform/resolvers": "^5.2.2",
+    "@nivo/bar": "^0.99.0",
+    "@nivo/core": "^0.99.0",
+    "@nivo/line": "^0.99.0",
+    "@nivo/pie": "^0.99.0",
+    "@phosphor-icons/react": "^2.1.10",
+    "@radix-ui/react-alert-dialog": "^1.1.15",
+    "@radix-ui/react-checkbox": "^1.3.3",
+    "@radix-ui/react-dialog": "^1.1.15",
+    "@radix-ui/react-dropdown-menu": "^2.1.16",
+    "@radix-ui/react-label": "^2.1.8",
+    "@radix-ui/react-popover": "^1.1.15",
+    "@radix-ui/react-scroll-area": "^1.2.10",
+    "@radix-ui/react-select": "^2.2.6",
+    "@radix-ui/react-slider": "^1.3.6",
+    "@radix-ui/react-switch": "^1.2.6",
+    "@radix-ui/react-tabs": "^1.1.13",
+    "@radix-ui/react-tooltip": "^1.2.8",
     "@tanstack/react-query": "^5.59.20",
     "@tanstack/react-virtual": "^3.13.12",
+    "@tremor/react": "^3.18.7",
     "@types/react-simple-maps": "^3.0.6",
     "axios": "^1.7.7",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "cmdk": "^1.1.1",
     "d3-geo": "^3.1.1",
+    "date-fns": "^4.1.0",
     "embla-carousel-autoplay": "^8.6.0",
     "embla-carousel-react": "^8.6.0",
     "framer-motion": "^12.23.24",
     "lenis": "^1.3.15",
     "lucide-react": "^0.553.0",
     "react": "^18.3.1",
+    "react-day-picker": "^9.11.1",
     "react-dom": "^18.3.1",
+    "react-dropzone": "^14.3.8",
+    "react-error-boundary": "^6.0.0",
+    "react-hook-form": "^7.66.1",
     "react-hot-toast": "^2.6.0",
     "react-router-dom": "^6.28.0",
     "react-simple-maps": "^3.0.0",
+    "react-wrap-balancer": "^1.1.1",
     "recharts": "^2.15.4",
+    "socket.io-client": "^4.8.1",
+    "tailwind-merge": "^3.4.0",
+    "wavesurfer.js": "^7.11.1",
+    "zod": "^4.1.12",
     "zustand": "^5.0.1"
   },
   "devDependencies": {
+    "@tanstack/react-query-devtools": "^5.90.2",
     "@types/node": "^22.18.13",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
     "@vitejs/plugin-react": "^4.3.3",
     "autoprefixer": "^10.4.20",
     "postcss": "^8.4.49",
+    "rollup-plugin-visualizer": "^6.0.5",
     "tailwindcss": "^3.4.15",
     "typescript": "^5.6.3",
     "vite": "^5.4.11"
